<resources>
    <string name="app_name">weebi</string>
    <string name="error_nan">Not a number</string>
    <string name="error_syntax">Error</string>
    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="clr">ac</string>
    <string name="del">c</string>
    <string name="desc_const_e">Euler\'s number</string>
    <string name="desc_const_pi">pi</string>
    <string name="desc_dec_point">point</string>
    <string name="desc_lparen">left parenthesis</string>
    <string name="desc_rparen">right parenthesis</string>
    <string name="desc_fun_cos">cosine</string>
    <string name="desc_fun_ln">natural logarithm</string>
    <string name="desc_fun_log">logarithm</string>
    <string name="desc_fun_sin">sine</string>
    <string name="desc_fun_tan">tangent</string>
    <string name="desc_op_add">plus</string>
    <string name="desc_op_div">divide</string>
    <string name="desc_op_ok">Valide</string>
    <string name="desc_op_perc">percentage</string>
    <string name="desc_op_mul">times</string>
    <string name="desc_op_pow">power</string>
    <string name="desc_op_sqrt">square root</string>
    <string name="desc_op_sub">minus</string>
    <string name="desc_clr">clear</string>
    <string name="desc_del">delete</string>
    <string name="desc_eq">equals</string>
    <string name="title_activity_client_list">Directory</string>
    <string name="title_activity_client_page">Client</string>
    <string name="title_activity_invoice_list">Invoices</string>
    <string name="title_activity_invoice_details">Ticket</string>
    <string name="error_empty_field_msg">Please fill this field</string>
    <string name="double_zero">00</string>
    <string name="triple_zero">000</string>
    <string name="print_invoice_title">Print</string>
    <string name="op_ok">OK</string>
    <string name="search_contact_hint">Search by number</string>
    <string name="client_deposit">Register a deposit </string>
    <string name="delete_invoice">Delete</string>
    <string name="restore_invoice">Restore invoice</string>
    <string name="archived_invoices">Deleted invoices</string>
    <string name="alphabetical_sorting">Sort by alphabetical order</string>
    <string name="balance_sorting">Sort by balance</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="numalreadyused">This number is already used by a client</string>
    <string name="numnomatch">Numbers do not match</string>
    <string name="dropit">Cancel</string>
    <string name="validate">Validate</string>
    <string name="registerdepot">Deposit</string>
    <string name="emptysolde">Please type an amount</string>
    <string name="solderegistersuccess">Deposit registered</string>
    <string name="yes">Yes</string>
    <string name="defaultclient">Sale</string>
    <string name="none_found">No device detected</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No device connected</string>
    <string name="scanning">Searching...</string>
    <string name="strLang">fr</string>
    <string name="button_scan">Scan</string>
    <string name="btnSearch">Connect printer using bluetooth</string>
    <string name="btnClose">Close</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="error_mail_not_valid">Invalide email</string>
    <string name="send_invoice_title">Share</string>
    <string name="reference">Reference</string>
    <string name="prix">Price</string>
    <string name="quantite">Unit</string>
    <string name="select_customer">Choose a client</string>
    <string name="edited_client_ok">Client information updated</string>
    <string name="type_number_again">Type number again</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="Balance">Balance</string>
    <string name="mail">Email</string>
    <string name="user_info">Edit your information</string>
    <string name="save_info_first">Please first configure your account</string>
    <string name="select_option">Select an option</string>
    <string name="Take_picture">Take a photo</string>
    <string name="Select_picture">Select a photo</string>
    <string name="logo">Select logo</string>
    <string name="Type_references">Select operation</string>
    <string name="invoice_saved">Invoice saved</string>
    <string name="invoice_number">Invoice : # </string>
    <string name="invoice_depot_number">Deposit : # </string>
    <string name="total">Total : </string>
    <string name="Clientwithpositivebalancecreated">Client added</string>
    <string name="businessinfoupdated">Informations updated</string>
    <string name="businessinfosetup">Account configure</string>
    <string name="invoicenumber">Invoice # :</string>
    <string name="date">\nDate :</string>
    <string name="totalinvoice">Total :</string>
    <string name="details">Ticket</string>
    <string name="deleteinvoices">Deleted invoice</string>
    <string name="confirm_restore_invoice">Confirm restoring invoice</string>
    <string name="client_need_tobecreated">Please first register a customer</string>
    <string name="exemple_depot"> Example : 5000</string>
    <string name="ajouter_un_client">Add a client</string>
    <string name="operations">Opérations (x)</string>
    <string name="client">Client :</string>
    <string name="businessinfo">Name</string>
    <string name="uploadreferences">Import references</string>
    <string name="configimprimante">Configure printer</string>
    <string name="nobluetoothpaired">Bluetooth is not activated</string>
    <string name="printingprocessing">Printing...</string>
    <string name="blueconnectinlost">Printer is not connected</string>
    <string name="blueconnectionsuccess">Printer is connected</string>
    <string name="telegrambuildertitle">Download Telegram</string>
    <string name="telegrambuildermsg">Click ok to download Telegram</string>
    <string name="weebibotsettitle">Configure robot weebi</string>
    <string name="weebibotsetmsg">Click this link to configure robot weebi</string>
    <string name="telegram_not_installed">Telegram is not installed</string>
    <string name="shop_name">"Name"</string>
    <string name="shop_call">"Number"</string>
    <string name="client_name">"Client name"</string>
    <string name="client_call">"Client number"</string>
    <string name="vente">" \nSale "</string>
    <string name="facture_of">"\nInvoice date : "</string>
    <string name="montant">"\nAmount : "</string>
    <string name="montant_egale">"Amount = "</string>
    <string name="depot">"\nDeposit "</string>
    <string name="solde_ajoute">"\nDeposit :"</string>
    <string name="reference_unit_total">" Reference        / U / Total "</string>
    <string name="solde_final">"\nNew balance :         "</string>
    <string name="merci">Thanks for your loyalty. \n\n</string>
    <string name="depot_du">"Deposit date "</string>
    <string name="edit_client">Edit client information</string>
    <string name="enregistrer_acompte">Register a deposit</string>
    <string name="ajouter_robot_weebi">Add the robot weebi</string>
    <string name="facture_enregistree">Invoice saved</string>
    <string name="archives_factures">Deleted invoices</string>
    <string name="facture">"Invoice"</string>
    <string name="facture_supprimee">Invoice deleted</string>
    <string name="credit_client">" \nClient credit : "</string>
    <string name="ligne">\n ______________________________\n</string>
    <string name="espace_total">"\n              Total : "</string>
    <string name="oui">Yes</string>
    <string name="annuler">Cancel</string>
    <string name="confirmer_suppressio_facture">"confirm restoring invoice "</string>
    <string name="liste_des_clients">Clients list</string>
    <string name="enregistrer_depot">\"\"</string>
    <string name="liste_des_factures_button">List Invoices</string>
    <string name="enregistrer_une_vente">Weebi</string>
    <string name="start_scan">Scan</string>
    <string name="de">From : </string>
    <string name="choix_langue">Select language</string>
    <string name="anglais">English</string>
    <string name="français">French</string>
    <string name="arabe">Arab</string>
    <string name="filtrer_par_date">Filter by date</string>
    <string name="filtrer_par_balance">Filter by balance</string>
    <string-array name="database">


        <item>divers</item>

    </string-array>
    <string name="Currency">choose currency</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="remboursement">payback</string>
    <string name="facebook_app_id">136691900177350</string>
    <string name="ajouter_une_r_f_rence">Add a reference</string>
    <string name="reference_existe">Reference is already added</string>
    <string name="add_reference">Ajouter une reference</string>
    <string name="nom_reference">Name reference</string>
    <string name="r_f_rences">References</string>
    <string name="modifier_reference">Update une reference</string>
    <string name="title_reference">References</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">inscription</string>
    <string name="con_firebase">Connexion</string>
    <string name="email">Email</string>
    <string name="lenom">Password</string>
    <string name="hint_password">password</string>
    <string name="sinscrire">Inscription</string>
    <string name="sauvegarder" />
    <string name="connectionreussi">Connexion réussi </string>
    <string name="connectionechec">Connexion échoué</string>
    <string name="authenticatefailed">Authentification échouée</string>
    <string name="inscriptionreussi">Inscription Réussi</string>
    <string name="createuserfbgood">createUserWithEmail:onComplete:</string>
    <string name="pasemailgoogle">Pas d\'email google</string>
    <string name="soldeimpression">\nSolde : </string>
    <string name="dateticket">Date : </string>
    <string name="sauvegardedonnees">Données sauvegardées</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comName">comName</string>
    <string name="title_activity_factures_">Factures_Activity</string>
    <string name="title_activity_depots_">Depots_Activity</string>
    <string name="title_activity_version2">Version2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_interface_v2">InterfaceV2</string>
    <string name="title_activity_new_weebi">NewWeebi</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="customers">Customers</string>
    <string name="sales_of_the_day">Suivi de la caisse par jour</string>
    <string name="settings">Settings</string>
    <string name="sales_analysis">Statistiques</string>
</resources>