<?xml version="1.0" encoding="utf-8"?><!--
    android:background="@color/pad_numeric_background_color"
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pad_numeric_background_color"
    android:orientation="vertical"
    android:padding="16dp">
    <!--    android:inputType="textPersonName" -->
    <com.andreabaccega.widget.FormEditText
        android:id="@+id/client_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="8dp"
        android:drawableTint="@color/pad_advanced_background_color"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        whatever:emptyErrorString="@string/empty_field"
        whatever:testType="nocheck" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/client_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_call_white_24dp"
        android:drawableTint="@color/pad_advanced_background_color"
        android:hint="@string/mail"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        whatever:emptyErrorString="@string/empty_field"
        whatever:testErrorString="@string/error_mail_not_valid"
        whatever:testType="email" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/client_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_call_white_24dp"
        android:drawablePadding="8dp"
        android:drawableTint="@color/pad_advanced_background_color"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        whatever:emptyErrorString="@string/empty_field"
        whatever:testErrorString="@string/error_phone_not_valid"
        whatever:testType="numeric" />


    <com.andreabaccega.widget.FormEditText
        android:id="@+id/client_solde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_database_plus_white_24dp"
        android:drawableTint="@color/pad_advanced_background_color"
        android:hint="@string/Balance"
        android:inputType="number"
        android:textColor="@android:color/white"

        android:textColorHint="@android:color/darker_gray"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty"
        whatever:testType="numeric" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/clavn"
        android:visibility="gone">
        <include
            layout="@layout/clavier_num"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/clavl"
        android:visibility="gone">
        <include
            layout="@layout/clavier_lettre"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
           />
    </LinearLayout>


    <ImageView
        android:id="@+id/oknewclient"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ok"
        android:tint="@color/tintgreen" />

</LinearLayout>