<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/webView"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="16sp"
        android:visibility="invisible">

    </EditText>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/btnClose"
        android:layout_alignBottom="@+id/btnClose"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"></Button>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_content"
        android:layout_alignParentLeft="true"
        android:text="@string/btnClose"
        android:visibility="invisible"></Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSend"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/btnSearch"
        android:visibility="visible"></Button>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/print_invoice_title"
        android:visibility="visible">

    </Button>

    <Button
        android:id="@+id/button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="GO" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button" />

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_test"
        android:layout_toRightOf="@+id/btnSend"
        android:text="&lt;" />

</RelativeLayout>
