<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/item_label"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#66636363"
            android:drawableLeft="@drawable/ic_clipboard_text_white_24dp"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:hint="@string/reference"
            android:inputType="text"
            android:maxLines="1"
            android:padding="4dp"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/empty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="false"
            android:ellipsize="end"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text=""
            android:textSize="22dp" />

        <EditText
            android:id="@+id/item_unit_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:ellipsize="end"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/prix"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ellipsize="end"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text=" x "
            android:textSize="16sp" />

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:ellipsize="end"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/quantite"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>